added deck class and moving cards from all cards to deck